--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -14,17 +14,15 @@
             android:id="@+id/dayText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="4dp"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="12sp"
+            android:textSize="16sp"
             tools:text="24" />
 
         <View
             android:id="@+id/dayFlightBottom"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
+            android:layout_height="4dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="8dp" />
 
