--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/statistic_gradient_background">
 
 
     <com.google.android.material.appbar.AppBarLayout
