--- a/app/src/main/res/layout/set_add.xml
+++ b/app/src/main/res/layout/set_add.xml
@@ -31,7 +31,9 @@
                 android:hint="Name"
                 android:gravity="center_horizontal"
                 android:maxLength="10"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
+                android:inputType="textFilter"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
