--- a/app/src/main/res/layout/fragment_choose_set.xml
+++ b/app/src/main/res/layout/fragment_choose_set.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.calendar.SetChooseFragment">
+    tools:context=".ui.calendar.SetChooseFragment"
+    android:background="@drawable/gradient_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/choose_recycler_view"
