--- a/app/src/main/res/layout/set_add.xml
+++ b/app/src/main/res/layout/set_add.xml
@@ -75,7 +75,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Time"
+                android:hint="Duration"
                 android:inputType="number"
                 android:maxLength="5"
                 android:singleLine="true" />
