--- a/app/src/main/res/layout/set_choose_item.xml
+++ b/app/src/main/res/layout/set_choose_item.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="3dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
